{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "e22481d1-3dfe-44dd-b225-08b7112bd6c8",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "205adcb1-f42c-4a71-9e97-4af36a50ff94",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "4cd71c79-e003-48b7-a4b8-b516d0aab173",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "PassThrough",
                    "id": "715fcd79-5d28-4090-b16b-69b935090554",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "224f0161-ce1e-4857-8615-ebf68205d30a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "83f96083-d0d8-4728-a19a-2538311d2d74",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryShoot",
                    "type": "Button",
                    "id": "50883662-7789-427d-860e-19b0ab30145d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "c72fee7b-deab-46d7-ae35-59dda55b391c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseUtility",
                    "type": "Button",
                    "id": "7154dbff-90c5-466a-9e8b-77e4967413e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a48457c7-3560-442b-892c-2677e4414ce3",
                    "path": "<SwitchProControllerHID>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "ProController",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "23bf7658-6440-4340-8053-8d16ac0ca4ed",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "59613c9d-b65e-4db5-af2d-f72f8b4a796a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "817c47a9-2251-4950-ad98-11b8f9bcad87",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fdbc972b-6b68-49cf-b4a3-b0a34d55ed91",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d7b1fb00-e5f8-4bb1-a510-aa7f5996d9cf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1a7a282f-1356-4e65-b673-c781f091961d",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c69550d-85f7-4bb7-a776-fc3f021adf3b",
                    "path": "<SwitchProControllerHID>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "ProController",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d10a1f3a-ec56-42cd-afaa-9f4127e43ebb",
                    "path": "<SwitchProControllerHID>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "ProController",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e111f7ad-9a28-40fa-9d0b-dfeb2fb8d6b1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ba26f3c-b241-4409-82a6-12d7cf68b01e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2798b547-ba67-409b-be99-453b9642b0d3",
                    "path": "<SwitchProControllerHID>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "ProController",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e447265-f1df-46dc-83be-0c953c47fa32",
                    "path": "<SwitchProControllerHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "ProController",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8730539a-02da-4624-a68e-de3ad216b7c9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee3d211d-b7a6-4f4c-842a-7969131cee3b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dee60d6-804c-4a4b-8a6c-09a0a908bbdb",
                    "path": "<SwitchProControllerHID>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "ProController",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "222a8b61-d459-442c-9fa7-8383a5119bed",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "UseUtility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "874944eb-2dde-47ef-b2b8-1d97d865d482",
                    "path": "<SwitchProControllerHID>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "ProController",
                    "action": "UseUtility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db793b1c-d38a-4095-9291-a976603cbce0",
                    "path": "<SwitchProControllerHID>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "ProController",
                    "action": "SecondaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c41f135e-227a-4a0d-802e-07a914892408",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "SecondaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "ProController",
            "bindingGroup": "ProController",
            "devices": [
                {
                    "devicePath": "<SwitchProControllerHID>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "KBM",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}